# parse-IEX

./: README.md  pyproject.toml
parse_iex/: iextp.py  tops.py
parseiex/: tops.py
tests/: test_iexparsing.py  test_iextp.py  test_parse_iex.py  test_parseiex.py  test_tops.py
