[tool.poetry]
name = "parseiex"
version = "0.2.0"
description = "Parse IEX market data streams"
license = "BSD-2-Clause"
authors = ["Amit Goren"]
readme = "README.md"
homepage = "https://github.com/mmatamm/parseiex"
repository = "https://github.com/mmatamm/parseiex.git"
keywords = ["IEX"]

[tool.poetry.dependencies]
python = "^3.10"
deprecation = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
